# reviewpilot-browser-use

./: .env.example  .gitignore  .reviewpilot.smoke.yml  .reviewpilot.yml  LICENSE  README.md  _cancel_run.py  _check_pr2.py  _check_run_detail.py  _check_runs.py  _check_scopes.py  _check_workflow.py  _create_pr2.py  _debug_create.py  _debug_tree.py  _debug_tree2.py  _get_logs.py  _get_logs2.py  _get_logs3.py  _get_logs4.py  _get_logs6.py  _get_logs7.py  _poll6.py  _poll7.py  _poll_run.py  _setup_action.py  _setup_action2.py  prd.md  pyproject.toml
.github/actions/reviewpilot/: Dockerfile  action.yml
.github/workflows/: reviewpilot.yml
examples/nextjs-demo/: README.md  package-lock.json  package.json
examples/nextjs-demo/app/: layout.tsx  page.tsx
examples/nextjs-demo/app/login/: page.tsx
examples/nextjs-demo/app/pricing/: page.tsx
examples/nextjs-demo/components/: Footer.tsx  Navbar.tsx
logs-dir/: 0_review.txt
logs-dir/review/: 16_Post Run actions_checkout@v4.txt  17_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Run actions_setup-python@v5.txt  4_Install ReviewPilot.txt  5_Run ReviewPilot.txt  6_Upload screenshots to release for inline view.txt  8_Upload full report artifact.txt  system.txt
reviewpilot/: __init__.py
reviewpilot/browser/: __init__.py  artifacts.py  browser_use_runner.py  screenshots.py
reviewpilot/cli/: __init__.py  main.py
reviewpilot/cli/commands/: doctor.py  init.py  report.py  run.py
reviewpilot/core/: __init__.py  config.py  result.py  runner.py  severity.py
reviewpilot/github/: __init__.py  action.py  comments.py  pr_context.py
reviewpilot/judge/: __init__.py  evaluator.py  prompts.py  schemas.py
reviewpilot/reports/: __init__.py  html.py  markdown.py
reviewpilot/reports/templates/: review.html.j2
tests/: test_browser_runner.py  test_config.py  test_models.py  test_reports.py
